--- a/Login/FrmIngresoPerfil.resx
+++ b/Login/FrmIngresoPerfil.resx
@@ -155,4 +155,28 @@
         3O0FVs2PcHBu01En07jB9ztCbKFNIs7CQi7jU4nEP7o0aTaNxYRSAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAMAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAzJmACs+fdSUAAAAAAAAAAP/fvwjr2MQNAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAMyZZgXWrYUZ8+DNbPThzdP04c7/38/C/+vayer14s6T8ubMFAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADw4dIR9OHOwdnLvv9zgpL/ka22/8rGx//Ix8v/yr+6//Th
+        zujL2dlJWM76NAAAAAAAAAAAAAAAAAAAAAAAAAAA8+DNr/Thzv/t28r/f4mY/zOQu/9Pja3/cJ2y/6ag
+        pf/04c7/9OHO6PLmzBQAAAAAAAAAAAAAAABAv/8EY8/41Nvd0//04c7/08nB/3iIm/9fjLH/Wouv/yma
+        xf/Rw7j/9OHO//Thzv/04s6MAAAAAAAAAAAAAAAAAAAAALjZ4LPy4M//9OHO/5ajr/9ll77/Z5vC/2GS
+        uf8pjrv/xr+3//Thzv/04c7/9OHO5AAAAAAAAAAAAAAAAAAAAAD04c669OHO//Thzv/Lw7z/U4eq/0WU
+        v/83jrf/Gq/g/36frv/04c7/9OHO//Thzv//5swKAAAAAAAAAAAAAAAA9OHPs/Xj0v/04c7/xr+5/0Wo
+        z/95obn/5OXq/1CZu/9qjqD/9OHO//Thzv/04c79/8zMBQAAAAAAAAAAAAAAAPPhzoH47eH/9OHO/7S0
+        sf9mqMb/SZS2/zylzP8dodD/TKHB//Thzv/04c7/9OHNzgAAAAAAAAAAAAAAAAAAAADn1bwq9OHO+vTh
+        zv/04c7/ZaG2/xq16f8ZvPH/Gbzx/zKbxP/04c7/9OLQ//Pj0W4AAAAAAAAAAAAAAAC/v4AE0Z95PfTh
+        z3n04c7/9OHO/8HBvP8kos//Gbzx/xm47P9jmrD/9OHO//ThzsLjqo4Syp91GAAAAAAAAAAAAAAAAAAA
+        AAD///8B9eLPevThzvr04c7/q7e4/2yjtf9/m6n/3c7A//Thz7Pv388QWrTLItObehcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD44csi9eHOfvThzrLl08S77NrKlvPg0EEAAAAAHLjxJBq88fAAv/8EAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzP8FAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP//AAD8HwAA8A8AAOAHAADAAwAAwAMAAMADAADAAwAAwAMAAOAHAADwBwAA+A8AAP47
+        AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
