--- a/Login/frmAddUser.resx
+++ b/Login/frmAddUser.resx
@@ -120,24 +120,24 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAFBSURBVEhLrda/K0VhHMfxUxZKTDeDjDY3ZbiDxSKDQXYDBvkflKh7ZwsLg4HFJJMSJWSTSTcM
-        kl+FSQZlwPtbbunpc5xzz/d512u69/k+dU/PeW6Ss2Ec4AXXWEEnojaDL3wH7nCKMbjrxgfCTf76xABc
-        LUIND63C1THU4NA5XNlzUIND9j1Xt1CDQ5dwtQU1OLQNV3mf0QlcXUANDl3B1QbU4NAaXPXiBmp4g33e
-        BXdTUBs0zCJKbXiC2uQR7YjWBNRG9sKN2ijURhVEqQ9zeIbayO6nJYygFU3VgknY2VDD07xhAR3IzO6V
-        OtSgvF5hP3Vq/XiHWtwsuwyHINuFWlTUIWT3UAuKeoDMDp9aUJTNk+1BLShqHrISNpH1r+c/9qpaRhmZ
-        2cEbxDRqsFt2H0c4+2UX4g7WUcU4epBSkvwA5AIv9SoZFSIAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAABGdBTUEAALGPC/xhBQAAAUFJREFUSEut
+        1r8rRWEcx/FTFkpMN4OMNjdluIPFIoNBdgMG+R+UqHtnCwuDgcUkkxIlZJNJNwySX4VJBmXA+1tu6elz
+        nHPP93nXa7r3+T51T895bpKzYRzgBddYQSeiNoMvfAfucIoxuOvGB8JN/vrEAFwtQg0PrcLVMdTg0Dlc
+        2XNQg0P2PVe3UINDl3C1BTU4tA1XeZ/RCVxdQA0OXcHVBtTg0Bpc9eIGaniDfd4Fd1NQGzTMIkpteILa
+        5BHtiNYE1Eb2wo3aKNRGFUSpD3N4htrI7qcljKAVTdWCSdjZUMPTvGEBHcjM7pU61KC8XmE/dWr9eIda
+        3Cy7DIcg24VaVNQhZPdQC4p6gMwOn1pQlM2T7UEtKGoeshI2kfWv5z/2qlpGGZnZwRvENGqwW3YfRzj7
+        ZRfiDtZRxTh6kFKS/ADkAi/1KhkVIgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAEqSURBVEhL7dQ9TgJRFMXxaUzEj6i9ColuQ+NiWIAFtcZGFiHsADQxYQVgbbSywEQaTSysrCyU
-        /zHvETwMw4eBUHCSX0Lm3XsH3jAvWWbhs40ibtDBR6DPuqa1LUycFZzjEz8jqOYM6hkredwjbVgW9ewj
-        M3t4hjfXcISd4Bh1eF0bu0jNGh7hTacYlhK8/gGaNZAKvFjfXNH+lvES6HPccz1s77vCn+gnf8MLtS2K
-        BvraJZQT+Jpmxd7fNOFFsg7lFb6ma8omfE00s5c7pBXFG7zB10bdoIVeZr5FShVeeAslPuT3oP8hN+B9
-        +sMMZANP8GK9pcNyAa/XDM1KzSF0znhTfNFWkYO29Bpep94DZKaAaY8K9Y4V7e/MDrv++HH9Ffz7uF5m
-        XkmSLoEhx/P5g+fJAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASpJREFUSEvt
+        1D1OAlEUxfFpTMSPqL0KiW5D42JYgAW1xkYWIewANDFhBWBttLLARBpNLKysLJT/Me8RPAzDh4FQcJJf
+        QubdewfeMC9ZZuGzjSJu0MFHoM+6prUtTJwVnOMTPyOo5gzqGSt53CNtWBb17CMze3iGN9dwhJ3gGHV4
+        XRu7SM0aHuFNpxiWErz+AZo1kAq8WN9c0f6W8RLoc9xzPWzvu8Kf6Cd/wwu1LYoG+tollBP4mmbF3t80
+        4UWyDuUVvqZryiZ8TTSzlzukFcUbvMHXRt2ghV5mvkVKFV54CyU+5Peg/yE34H36wwxkA0/wYr2lw3IB
+        r9cMzUrNIXTOeFN80VaRg7b0Gl6n3gNkpoBpjwr1jhXt78wOu/74cf0V/Pu4XmZeSZIugSHH8/mD58kA
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -149,6 +149,101 @@
         4UWyDuUVvqZryiZ8TTSzlzukFcUbvMHXRt2ghV5mvkVKFV54CyU+5Peg/yE34H36wwxkA0/wYr2lw3IB
         r9cMzUrNIXTOeFN80VaRg7b0Gl6n3gNkpoBpjwr1jhXt78wOu/74cf0V/Pu4XmZeSZIugSHH8/mD58kA
         AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZANCwGQTdPBkE3TwZA
+        NCwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkE4UgZCNtwGQjf/BkI3/wZC
+        N/8GQjf/BkI32wZDNlAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkI4fAZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf+BkE3eQAAAAAAAAAAAAAAAAAAAAAAAAAABkE4UgZCN/8GQjf/B0I4lwZD
+        N8sGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/4GQTdPAAAAAAAAAAAAAAAAAAAAAQZCN90GQjf/BkI3/wVB
+        ODcGQjh8BkI2+AZCOLMGQjfkBkI3/wZCN/8GQjf/BkI32gAAAAEAAAAAAAAAAAVANjQGQjf/BkI3/wZC
+        N/8APDwRBkQ4KQBHORIAOzsNBkI32QZCN/8GQjf/BkI3/wZCN/8FRDkxAAAAAAAAAAAGQTZaBkI3/wZC
+        N/8HQjfrAAAAAQZDN+YKPTMZB0I2mwZCN/8GQjf/BkI3/wZCN/8GQjf/BkI2WQAAAAAAAAAABkI2WQZC
+        N/8GQjf/BkI32QBAMBAHQzdFBUI3XQZCN/QGQjizBkM3LgZCN+QGQjf/BkI3/wZDN1gAAAAAAAAAAAVA
+        NjQGQjf/BkI3/wZCN90AAAAACEQ4RAZCNvgFQjfoBkA0LAAAAAEFQjiTBkI3/wZCN/8FRDkxAAAAAAAA
+        AAAAAAABBkI33QZCN/8GQjf+BkI3qwZCN/cGQjf/BkI3/wdCNmwGQzZ2BkE2twZCN/8GQjfaAAAAAQAA
+        AAAAAAAAAAAAAAZBOFIGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf+BkE3TwAA
+        AAAAAAAAAAAAAAAAAAAAAAAABkI4fAZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf+BkE3eQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGQThSBkI33QZCN/8GQjf/BkI3/wZCN/8GQjfbBkM2UAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAIEQjk6BkI2VQZCNlUEQzY5AAAAAQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD//wAA+B8AAPAPAADgBwAAxgMAAMeDAADFAwAAxyMAAMZj
+        AADAYwAA4AcAAPAPAAD4HwAA//8AAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAVVUDCEE1QwVCOI4GQjiuBkI3xgZCN8YGQjiuBUE2jQhCNkIAVVUDAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAASTcOBkI4gAdCNuoGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wVC
+        N+kGQzd+ADs7DQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAABkI2WQZCN+wGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8HQjfrBkM4VwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQZBN4EGQjf+BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf+BkI2fwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGQTd5BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI4dwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkM4VwZCN/4GQjf/BkI3/wZCN/8GQjf8BkI4pQZC
+        N98GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf+BkM3VAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEMw8HQjfrBkI3/wZCN/8GQjf/BkI3/wZC
+        N60AAAAAB0E2SwZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8FQjfpADs7DQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkI2fwZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3gwAAAAAGQjZZBkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjh8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQAQGQjftBkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQzdcAAAAAAxGOhYGQjh8BkI44QZCN/8GQTa3DEY6FgVCN4wGQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wdCN+sAVVUDAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACEI2QgZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wVBODcAAAAAAAAAAAAAAAAAVVUDB0I4TQA9PRUAAAAAB0E2cQZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wRBOT8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAGQTiJBkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/ADw8EQAAAAAHQTZxBkM3LgAAAAAAAAAAAAAAAAdD
+        NiYGQjfyBkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkM3hgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAZCN6YGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN+wAAAAAAAAAAAZCN+UGQjf/BUM2XwAA
+        AAAASUkHBkI3zAZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQTakAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAB0I3wQZCN/8GQjf/BkI3/wZCN/8GQjf/BkM3xwAAAAAAgAACBkI3+wVC
+        N7oAVVUDAAAAAAdCNpsGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wVB
+        N78AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFQTe/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjayAAAAAAtA
+        NRgGQTfeAEAzFAAAAAAFQjddBkI3/wZCN/8GQjf/BkI3/wZBN4EAPDwRBkI3zAZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BUI3vgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZCN6YGQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N6IAAAAAB0A5JAdDNiYAAAAABkA0LAZCN/QGQjf/BkI3yAVCOTYHQzhyADs7DQAAAAAFQje6BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQTakAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkI2iAZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkE2pAAAAAAAAAAAAAAAAAhCOh8GQjfkBkI3/wZCN/8FQjaSAAAAAAAAAAAAAAAAAFVVAwZC
+        NqkGQjf+BkI3/wZCN/8GQjf/BkI3/wZDN4YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIQjZCBkI3/wZC
+        N/8GQjf/BkI3/wZCN/8HQjfBAAAAAAAAAAAAQDMUBkI32AZCN/8GQjf/BkI3/wZCN/0GQTeoAFUrBgAA
+        AAAAAAAAAAAAAAVDN5EGQjf/BkI3/wZCN/8GQjf/BEE5PwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABA
+        QAQGQjftBkI3/wZCN/8GQjf/BkI3/wZCN/wFQjZoB0M5SAZCN9YGQjf/BkI3/wZCN/8GQjf/BkI3/wdC
+        N8QAAAAAAFUrBgVDNmMHRTclBkI3uQZCN/8GQjf/BkI3/wdCN+sAVVUDAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAZCNoQGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI4ygA5OQkHQzdrBkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkE3gQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAEQzDwdCN+sGQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI2+AZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wVCN+kAOzsNAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkM4VwZCN/4GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf+BkM3VAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkI2iAZCN/8GQjf/BkI3/wZC
+        N/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZB
+        OIUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBkE3gQZC
+        N/4GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/4GQjZ/AAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABkI2WQZCN+4GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjftBkM4VwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAEc5EgVBNo0GQjfzBkI3/wZCN/8GQjf/BkI3/wZCN/8GQjf/BkI3/wZC
+        N/8GQjfzBkI3iwA8PBEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQAgHQjhJBUI3jwZCOK4GQjfGBkI3xgZC
+        OK4FQjiOB0M5SABJSQcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/////////////////4H///wAf//4AB//4AAP/+AAB//AAAP/gY
+        AB/4GAAf8DxAD/A/4A/gP8AH4DOAB+AzAAfgNwQH4D48B+A8PAfwOB4P8DAeD/AAGA/4AAAf/AAAP/wA
+        AD/+AAD//4AB///AA///+B//////////////////
 </value>
   </data>
 </root>
